<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.


--><!--  Scroll View of the Landing Page   -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tan_background"
        android:orientation="vertical"
        tools:context="com.example.android.miwok.MainActivity">

        <!--  Search Music Card View   -->

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_search"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icons"
                    android:src="@drawable/ic_search_white_24dp" />

                <TextView
                    android:id="@+id/searchMusic"
                    style="@style/CategoryStyle"
                    android:background="@color/category_search"
                    android:text="@string/search_music" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--  My Library Card View   -->

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_library"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icons"
                    android:src="@drawable/ic_library_music_white_24dp" />

                <TextView
                    android:id="@+id/myLibrary"
                    style="@style/CategoryStyle"
                    android:background="@color/category_library"
                    android:text="@string/my_library" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--  Now Playing Song Card View   -->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_playing"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icons"
                    android:src="@drawable/ic_play_arrow_white_24dp" />

                <TextView
                    android:id="@+id/nowPlaying"
                    style="@style/CategoryStyle"
                    android:background="@color/category_playing"
                    android:text="@string/now_playing" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  My Favourites Songs / Albums Card View   -->


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/category_favourites"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icons"
                    android:src="@drawable/ic_favorite_white_24dp" />

                <TextView
                    android:id="@+id/myFavourites"
                    style="@style/CategoryStyle"
                    android:background="@color/category_favourites"
                    android:text="@string/my_favourites" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <!--  Activity Description  Card View   -->


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/music_sturcture_intro"
                android:textColor="@color/primary_dark_color" />

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>