<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Musical Structure</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="search_music">Search Music</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="now_playing">Now Playing</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="my_library">My Library</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="my_favourites"> Favourites</string>
    <string name="music_sturcture_intro">This app would like to make use of a Spotify API to fetch data in the JSON format and Search for Music and Artist. It should fetch data from the user Spotify account. There is a page with the now playing song and an activity where to save our favourite songs.</string>
    <string name="logIn">Log In</string>
    <string name="search_description">Search will look for Artist or Song names over the Spotify API and will return Data in JSON format listing the results in the card views belos the Search entry</string>
    <string name="nowPlayingDescription">this screen will show the album cover and the Track and artist info plus controls to skip play stop the song. This Activity will make use of Spotify Player library to control Play, Stop and Next/Previous song.</string>
    <string name="favourite_description">This activity should contain favourites albums and songs chosen from the user when clicking the heart icon form the Now Playing Activity</string>
    <string name="my_library_description">My Library will fetch data from Spotify API and return JSON format data to fill the Library divided in Albums and Artists</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>

</resources>
